WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230609
AX: aria-expanded is no longer supported on quite a few roles in ARIA 1.2
https://bugs.webkit.org/show_bug.cgi?id=230609
Summary
AX: aria-expanded is no longer supported on quite a few roles in ARIA 1.2
Joanmarie Diggs
Reported
2021-09-22 04:11:14 PDT
Steps to reproduce: 1. View data:text/html,<div role="dialog" aria-expanded="true"></div> 2. Examine the dialog using XCode's Accessibility Inspector Expected results: AXExpanded would not be true Actual results: AXExpanded is true A change was made in ARIA 1.2 removing aria-expanded as a supported property from a whole bunch of roles. See
https://www.w3.org/TR/wai-aria-1.2/#aria-expanded
. Dialog is just an example. Under
https://www.w3.org/TR/wai-aria-1.2/#state_property_processing
, it says: User agents MUST ignore non-global states and properties used on an element without a role supporting the state or property;
Attachments
Patch
(14.93 KB, patch)
2021-09-23 10:54 PDT
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
Patch
(15.86 KB, patch)
2021-09-24 01:32 PDT
,
Joanmarie Diggs
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(16.90 KB, patch)
2021-09-24 07:10 PDT
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-09-22 04:11:29 PDT
<
rdar://problem/83392274
>
Joanmarie Diggs
Comment 2
2021-09-23 07:20:08 PDT
Taking this one.
Joanmarie Diggs
Comment 3
2021-09-23 10:54:23 PDT
Created
attachment 439065
[details]
Patch
Joanmarie Diggs
Comment 4
2021-09-24 01:32:11 PDT
Created
attachment 439136
[details]
Patch
Joanmarie Diggs
Comment 5
2021-09-24 07:10:48 PDT
Created
attachment 439143
[details]
Patch
Joanmarie Diggs
Comment 6
2021-09-24 23:10:16 PDT
Chris: Could you please re-review when you get a chance? I made a couple of small changes since the initial patch you r+ed. Thanks in advance!
chris fleizach
Comment 7
2021-09-25 00:28:23 PDT
(In reply to Joanmarie Diggs from
comment #6
)
> Chris: Could you please re-review when you get a chance? I made a couple of > small changes since the initial patch you r+ed. Thanks in advance!
Looks ok Thanks
EWS
Comment 8
2021-09-25 01:07:28 PDT
Committed
r283078
(
242136@main
): <
https://commits.webkit.org/242136@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 439143
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug