AX: aria-expanded is no longer supported on quite a few roles in ARIA 1.2 https://bugs.webkit.org/show_bug.cgi?id=230609

Reviewed by Chris Fleizach.

Source/WebCore:

We were exposing aria-expanded on any element where it was explicitly
given a valid value (true/false). We should only expose it on roles where
aria-expanded is a supported property. In addition, the number of roles
where aria-expanded is a supported property was greatly reduced in ARIA 1.2.
This commit brings us in alignment with the spec.

Test: accessibility/aria-expanded-supported-roles.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::supportsExpanded const):
(WebCore::AccessibilityObject::isExpanded const):
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::canSetExpandedAttribute const):

LayoutTests:

* accessibility/aria-expanded-supported-roles.html: Added.
* accessibility/mac/aria-expanded-not-exposed-when-undefined.html: Updated.
* accessibility/mac/aria-expanded-standard-items.html: Updated.
* platform/glib/accessibility/aria-expanded-supported-roles-expected.txt: Added.
* platform/mac/accessibility/aria-expanded-supported-roles-expected.txt: Added.
* platform/win/TestExpectations:


Canonical link: https://commits.webkit.org/242136@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283078 268f45cc-cd09-0410-ab3c-d52691b4dbfc